fix(chip): overflow for long text

--- a/elements/pf-chip/pf-chip.css
+++ b/elements/pf-chip/pf-chip.css
@@ -61,6 +61,7 @@ div#outer {
 }
 
 span {
+  display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
